# solana_indexer_v1

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  errors.txt
src/: api.rs  config.rs  db.rs  error.rs  idl.rs  main.rs
src/indexer/: decoder.rs  fetcher.rs  mod.rs
