[package]
name = "solana-indexer-v1"
version = "0.1.0"
edition = "2021"
description = "A Solana program indexer with Anchor IDL-based instruction decoding"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# Web framework
axum = { version = "0.7", features = ["json"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json", "chrono"] }

# Solana
solana-client = "2.1"
solana-sdk = "2.1"
solana-transaction-status = "2.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bs58 = "0.5"
base64 = "0.22"
bincode = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Crypto
sha2 = "0.10"

# Compression (on-chain IDL)
flate2 = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Config
dotenvy = "0.15"
